--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
     </div><br/>
     <b>Animation Settings:</b><a class="about floatRight" href="#" id="aboutAnimation"><span class="fui-question-circle"></span></a><br/>
         <div class="indent">
-            <span class="smallTxt">&Delta; t = <span id="deltaT"></span> seconds</span><br/>
+            <span class="smallTxt">&Delta;t = <span id="deltaT"></span> seconds</span><br/>
             <span class="smallTxt">Num simulation steps per render: &nbsp;&nbsp;<input id="numStepsPerRender" value="" placeholder="" class="int form-control" type="text"></span><br/><br/>
             <a href="#" id="shouldCenterGeo" class="floatRight btn btn-lg btn-default">Re-center geometry</a>
         </div>
@@ -615,10 +615,10 @@
                     <!--Ambient Occlusion-->
                 <!--</label>-->
             <!--</div>-->
-            VR:
+            VR: <a class="about floatRight" href="#" id="aboutVR"><span class="fui-question-circle"></span></a>
             <div class="indent smallTxt">
                 Status: &nbsp;<span id="VRstatus"></span>
-                <a class="about floatRight" href="#" id="aboutVR"><span class="fui-question-circle"></span></a><br/>
+               <br/>
                 <div id="VRoptions">
 
                 </div>
